# web3cpp

./: .gitmodules  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  simple.cpp
include/: BinaryCoding.h  Data.h  Hash.h  HexCoding.h  ethereum.h  uint256.h  web3.h  web3cpp_interfaces.h
include/ethereum/: Address.h  AddressChecksum.h  ContractCall.h  RLP.h  Signer.h  Transaction.h
include/ethereum/ABI/: Array.h  Bytes.h  Function.h  ParamAddress.h  ParamBase.h  ValueDecoder.h  ValueEncoder.h
src/: BinaryCoding.cpp  CMakeLists.txt  Data.cpp  Hash.cpp  ethereum.cpp  web3.cpp
tests/: AbiTests.cpp  AddressTests.cpp  CMakeLists.txt  ContractCallTests.cpp  RLPTests.cpp  SignerTests.cpp  TWAnySignerTests.cpp  TWEthereumAbiValueDecoderTests.cpp  TWEthereumAbiValueEncodeTests.cpp  ValueDecoderTests.cpp  ValueEncoderTests.cpp  all_tests.cc  all_tests.cpp  all_tests.h  test_call.cpp  test_call.h  test_get_balance.cpp  test_get_balance.h
trezor-crypto/: CMakeLists.txt
